# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types for the OpenTalk subroom-audio module"
documentation = "https://docs.rs/opentalk-types-subroom-audio"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-signaling-subroom-audio"
publish = true
repository.workspace = true
version.workspace = true


[features]
backend = ["redis", "serde"]
frontend = ["serde"]
rand = ["opentalk-types-common/rand", "uuid/v4"]
redis = ["dep:redis-args", "opentalk-types-common/redis", "serde"]
serde = [
  "dep:serde",
  "opentalk-types-common/serde",
  "opentalk-types-signaling/serde",
]

[dependencies]
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
# redis.workspace = true
derive_more = { workspace = true, features = [
  "as_ref",
  "display",
  "from",
  "from_str",
  "into",
] }
redis-args = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
strum.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
