# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "Signaling types the OpenTalk whiteboard module"
documentation = "https://docs.rs/opentalk-types-signaling-whiteboard"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-types-signaling-whiteboard"
publish = true
repository.workspace = true
version.workspace = true

[features]
backend = ["serde"]
frontend = ["serde"]
serde = [
  "dep:serde",
  "opentalk-types-common/serde",
  "opentalk-types-signaling/serde",
  "url/serde",
]

[dependencies]
opentalk-types-common.workspace = true
opentalk-types-signaling.workspace = true
serde = { workspace = true, optional = true }
url.workspace = true
